<resources>
    <string name="app_name">PartyPooper</string>

    //login strings
    <string name="mailLogin">\u00A0E-MAIL</string>
    <string name="keyLogin">\u00A0PASSWORD</string>
    <string name="registerLogin">
        <u>Don\'t have an account? Register Here</u>
    </string>
    <string name="loginLogin">Login</string>

    //register strings
    <string name="titleRegister">Sign Up</string>
    <string name="usernameRegister">\u00A0USERNAME</string>
    <string name="birthdayRegister">\u00A0BIRTHDAY</string>
    <string name="mailRegister">\u00A0E-MAIL</string>
    <string name="keyRegister">\u00A0PASSWORD</string>
    <string name="confirmRegister">\u00A0CONFIRM PASSWORD</string>
    <string name="termsOfService1Register">By tapping Sign Up &amp; Accept, you agree to our</string>
    <string name="termsOfService2Register">Terms of Service &amp; Privacy Policy</string>
    <string name="signUpAcceptRegister">Sign Up &amp; Accept</string>

    <string-array name="gender">
        <item>None</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
