<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".Activitie.LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/loginlogo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_below="@+id/logoImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="#11000000"
        android:hint="@string/mailLogin"
        android:inputType="textEmailAddress"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_below="@+id/usernameText"
        android:layout_alignStart="@+id/usernameText"
        android:layout_marginTop="30dp"
        android:background="#11000000"
        android:hint="@string/keyLogin"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_below="@id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:elevation="5dp"
        android:background="@drawable/shadow_rect"
        android:text="@string/loginLogin"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/loginButton"
        android:layout_alignTop="@+id/loginButton"
        android:layout_alignEnd="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:inputType="text"
        android:text="@string/registerLogin"
        android:textColor="@android:color/background_dark"
        android:textSize="14dp"
        android:onClick="onClick"
        android:clickable="true"/>

</RelativeLayout>